--- a/Assignment2/Makefile
+++ b/Assignment2/Makefile
@@ -1,23 +1,30 @@
-
 SERVER_HOST?=localhost
 SERVER_PORT?=50000
 MONGO_HOST?=localhost
-MONGO_PORT?=27017
+MONGO_PORT?=50001
 MONGO_USERNAME?=admin
 MONGO_PASSWORD?=admin
 MONGO_DB?=marketplace
 POSTGRES_HOST?=localhost
-POSTGRES_PORT?=5432
+POSTGRES_PORT?=50002
 POSTGRES_USERNAME?=admin
 POSTGRES_PASSWORD?=admin
 POSTGRES_DB?=marketplace
 POSTGRES_MAX_CONN?=500
+TRANSACTION_HOST?=localhost
+TRANSACTION_PORT?=50003
+
+# use the rest as arguments
+RUN_ARGS := $(wordlist 2,$(words $(MAKECMDGOALS)),$(MAKECMDGOALS))
+# ...and turn them into do-nothing targets
+$(eval $(RUN_ARGS):;@:)
 
 
-build-server-seller:
+
+build-server-seller: build-proto
 	go build -o ./cmd/server/server-seller ./cmd/server
 
-build-server-buyer:
+build-server-buyer: build-proto
 	go build -o ./cmd/server/server-buyer ./cmd/server
 
 build-client-seller:
@@ -26,21 +33,35 @@ build-client-seller:
 build-client-buyer:
 	go build -o ./cmd/buyer/client-buyer ./cmd/buyer
 
+build-sql-server: build-proto
+	go build -o ./cmd/dbapi/sql/sql-server ./cmd/dbapi/sql
+
+build-nosql-server: build-proto
+	go build -o ./cmd/dbapi/nosql/nosql-server ./cmd/dbapi/nosql
+
 build-test-latency:
 	go build -o ./cmd/test_latency/test-latency ./cmd/test_latency
 
 build-test-throughput:
 	go build -o ./cmd/test_throughput/test-throughput ./cmd/test_throughput
 
-build-all: build-server-seller build-server-buyer build-client-seller build-client-buyer build-test-latency build-test-throughput
+build-transaction-server:
+	go build -o ./cmd/transaction/transaction-server ./cmd/transaction
 
-run-postgres:
-	docker compose -f ./deployment/docker/docker-compose.yaml up -d postgres pgbouncer
-	docker compose -f ./deployment/docker/docker-compose.yaml ps
+build-all: build-sql-server build-nosql-server build-transaction-server build-server-seller build-server-buyer build-client-seller build-client-buyer build-test-latency build-test-throughput
 
-run-mongo:
-	docker compose -f ./deployment/docker/docker-compose.yaml up -d mongodb
-	docker compose -f ./deployment/docker/docker-compose.yaml ps
+run-sql-server: build-sql-server
+	docker compose -f ../deployment/docker/docker-compose.yaml up -d postgres pgbouncer
+	docker compose -f ../deployment/docker/docker-compose.yaml ps
+	./cmd/dbapi/sql/sql-server
+
+run-nosql-server: build-nosql-server
+	docker compose -f ../deployment/docker/docker-compose.yaml up -d mongodb
+	docker compose -f ../deployment/docker/docker-compose.yaml ps
+	./cmd/dbapi/nosql/nosql-server
+
+run-server-transaction: build-transaction-server
+	./cmd/transaction/transaction-server
 
 run-server-seller: build-server-seller
 	./cmd/server/server-seller
@@ -55,10 +76,10 @@ run-client-buyer: build-client-buyer
 	./cmd/buyer/client-buyer
 
 run-test-latency: build-test-latency
-	./cmd/test_latency/test-latency
+	./cmd/test_latency/test-latency $(RUN_ARGS)
 
 run-test-throughput: build-test-throughput
-	./cmd/test_throughput/test-throughput
+	./cmd/test_throughput/test-throughput $(RUN_ARGS)
 
 build-proto:
 	 protoc \
@@ -69,3 +90,15 @@ build-proto:
  	common.proto \
  	nosql-api.proto \
  	sql-api.proto
+
+clean:
+	docker compose -f ../deployment/docker/docker-compose.yaml down -v || true
+	rm -rf ./cmd/dbapi/sql/sql-server || true
+	rm -rf ./cmd/dbapi/nosql/nosql-server || true
+	rm -rf ./cmd/transaction/transaction-server || true
+	rm -rf ./cmd/server/server-seller || true
+	rm -rf ./cmd/server/server-buyer || true
+	rm -rf ./cmd/seller/client-seller || true
+	rm -rf ./cmd/buyer/client-buyer || true
+	rm -rf ./cmd/test_latency/test-latency || true
+	rm -rf ./cmd/test_throughput/test-throughput || true
