--- a/docker-compose-two.yaml
+++ b/docker-compose-two.yaml
@@ -22,12 +22,12 @@ services:
       SYNC_HOST: 0.0.0.0
       SYNC_PORT: 60002
       NODE_NAME: customer-db1
-      PEER_NODE_NAMES: customer-db1,customer-db2
-      PEER_NODE_PORTS: 60002,60002
+      PEER_NODE_NAMES: customer-db1,customer-db2,customer-db3
+      PEER_NODE_PORTS: 60002,60002,60002
     networks:
       - marketplace-network
     volumes:
-      - postgresql-data:/var/lib/postgresql/data
+      - postgresql-data1:/var/lib/postgresql/data
     # Connect command inside the container: psql -h localhost -p 5432 -d marketplace -U admin
 
   customer-db2:
@@ -51,12 +51,40 @@ services:
       SYNC_HOST: 0.0.0.0
       SYNC_PORT: 60002
       NODE_NAME: customer-db2
-      PEER_NODE_NAMES: customer-db1,customer-db2
-      PEER_NODE_PORTS: 60002,60002
+      PEER_NODE_NAMES: customer-db1,customer-db2,customer-db3
+      PEER_NODE_PORTS: 60002,60002,60002
     networks:
       - marketplace-network
     volumes:
-      - postgresql-data:/var/lib/postgresql/data
+      - postgresql-data2:/var/lib/postgresql/data
+
+  customer-db3:
+    image: adarshzededa/customer-db:latest
+    platform: "linux/amd64"
+    build:
+      dockerfile: ./Dockerfile-customer-db
+    restart: always
+    #    ports:
+    #      - "50002:50002"
+    #      - "60002:60002"
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: marketplace
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
+      POSTGRES_MAX_CONN: 500
+      SERVER_HOST: 0.0.0.0
+      SERVER_PORT: 50002
+      SYNC_HOST: 0.0.0.0
+      SYNC_PORT: 60002
+      NODE_NAME: customer-db3
+      PEER_NODE_NAMES: customer-db1,customer-db2,customer-db3
+      PEER_NODE_PORTS: 60002,60002,60002
+    networks:
+      - marketplace-network
+    volumes:
+      - postgresql-data3:/var/lib/postgresql/data
 
   product-db1:
     image: adarshzededa/product-db:latest
@@ -64,8 +92,8 @@ services:
     build:
       dockerfile: ./Dockerfile-product-db
     restart: always
-    ports:
-      - "50003:50003"
+#    ports:
+#      - "50003:50003"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin
@@ -76,12 +104,71 @@ services:
       SERVER_HOST: 0.0.0.0
       SERVER_PORT: 50003
       MONGO_DB: marketplace
+      SYNC_HOST: 0.0.0.0
+      SYNC_PORT: 60003
       NODE_NAME: product-db1
-      PEER_NODE_NAMES: product-db1
+      PEER_NODE_NAMES: product-db1,product-db2,product-db3
+      PEER_NODE_PORTS: 60003,60003,60003
     networks:
       - marketplace-network
     volumes:
-      - mongodb_data:/data/db
+      - mongodb_data1:/data/db
+
+  product-db2:
+    image: adarshzededa/product-db:latest
+    platform: "linux/amd64"
+    build:
+      dockerfile: ./Dockerfile-product-db
+    restart: always
+#    ports:
+#      - "50003:50003"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_HOST: localhost
+      MONGO_PORT: 27017
+      MONGO_USER: admin
+      MONGO_PASSWORD: admin
+      SERVER_HOST: 0.0.0.0
+      SERVER_PORT: 50003
+      MONGO_DB: marketplace
+      SYNC_HOST: 0.0.0.0
+      SYNC_PORT: 60003
+      NODE_NAME: product-db2
+      PEER_NODE_NAMES: product-db1,product-db2,product-db3
+      PEER_NODE_PORTS: 60003,60003,60003
+    networks:
+      - marketplace-network
+    volumes:
+      - mongodb_data2:/data/db
+
+  product-db3:
+    image: adarshzededa/product-db:latest
+    platform: "linux/amd64"
+    build:
+      dockerfile: ./Dockerfile-product-db
+    restart: always
+#    ports:
+#      - "50003:50003"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_HOST: localhost
+      MONGO_PORT: 27017
+      MONGO_USER: admin
+      MONGO_PASSWORD: admin
+      SERVER_HOST: 0.0.0.0
+      SERVER_PORT: 50003
+      MONGO_DB: marketplace
+      SYNC_HOST: 0.0.0.0
+      SYNC_PORT: 60003
+      NODE_NAME: product-db3
+      PEER_NODE_NAMES: product-db1,product-db2,product-db3
+      PEER_NODE_PORTS: 60003,60003,60003
+    networks:
+      - marketplace-network
+    volumes:
+      - mongodb_data3:/data/db
 
   transaction-service:
     image: adarshzededa/transaction-service:latest
@@ -104,10 +191,6 @@ services:
     build:
       dockerfile: ./Dockerfile-server
     restart: always
-    depends_on:
-      - product-db1
-      - customer-db1
-      - transaction-service
     ports:
       - "50000:50000"
     environment:
@@ -148,9 +231,17 @@ services:
 
 # Add volumes definition
 volumes:
-  postgresql-data:
+  postgresql-data1:
     driver: local
-  mongodb_data:
+  postgresql-data2:
+    driver: local
+  postgresql-data3:
+    driver: local
+  mongodb_data1:
+    driver: local
+  mongodb_data2:
+    driver: local
+  mongodb_data3:
     driver: local
 
 networks:
