--- a/Dockerfile-client
+++ b/Dockerfile-client
@@ -1,8 +1,10 @@
 # Use official Golang image as the base image
-FROM golang:1.19 AS builder
+FROM golang:1.19-alpine3.18 AS builder
+
+ARG client=buyer
 
 #Golang env setup
-RUN mkdir -p /development/src/github.com/adarshsrinivasan/DS_S24/nosql /development/src/github.com/adarshsrinivasan/DS_S24/library /development/bin
+RUN mkdir -p /development/src/github.com/adarshsrinivasan/DS_S24/$client /development/src/github.com/adarshsrinivasan/DS_S24/library /development/bin
 RUN export GOPATH=/development
 RUN export GOROOT=/usr/local/go
 RUN export PATH=$PATH:$GOPATH/bin
@@ -15,7 +17,7 @@ WORKDIR /development/src/github.com/adarshsrinivasan/DS_S24
 COPY go.mod .
 COPY go.sum .
 COPY library ./library/
-COPY ./Assignment4/cmd/dbapi/nosql .
+COPY ./Assignment4/cmd/$client .
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
 RUN go mod download
@@ -24,33 +26,15 @@ RUN go mod download
 RUN go build -o main .
 
 # Start a new stage from scratch
-FROM mongo:4.4.6
+FROM alpine:3.18
 
 # Set environment variables
-## Mongo Env vars
-ENV MONGO_INITDB_ROOT_USERNAME: admin
-ENV MONGO_INITDB_ROOT_PASSWORD: admin
-
 ## app Env vars
-ENV SERVER_HOST: 0.0.0.0
-ENV SERVER_PORT: 50003
-ENV MONGO_HOST: localhost
-ENV MONGO_PORT: 27017
-ENV MONGO_USER: admin
-ENV MONGO_PASSWORD: admin
-ENV MONGO_DB: marketplace
-
-# Expose port
-EXPOSE 50003
-EXPOSE 60003
+ENV SERVER_HOST_NAMES: ""
+ENV SERVER_PORTS: 0
 
 # Copy the compiled Go binary from the builder stage into this new stage
 COPY --from=builder /development/src/github.com/adarshsrinivasan/DS_S24/main /app/main
 
-# Copy Supervisor configuration file
-COPY ./Assignment4/cmd/dbapi/nosql/start.sh .
-
-RUN chmod +x start.sh
-
 # Run the Go binary
-CMD ["./start.sh"]
+CMD ["/app/main"]
